removed local links

--- a/templates/kml.html
+++ b/templates/kml.html
@@ -70,9 +70,9 @@
          </div>
          
       </div>
-      <a href="http://pmpc1319:5000/jobrequest?day=88&year=2014&project=RG12_09">processing 88</a>
-      <a href="http://pmpc1319:5000/jobrequest?day=163&year=2014&project=GB13_01&sortie=a">processing 163a</a>
-      <a href="http://pmpc1319:5000/jobrequest?day=205&year=2013&project=IG13_12">processing 205</a>
+      <a href="/jobrequest?day=88&year=2014&project=RG12_09">processing 88</a>
+      <a href="/jobrequest?day=163&year=2014&project=GB13_01&sortie=a">processing 163a</a>
+      <a href="/jobrequest?day=205&year=2013&project=IG13_12">processing 205</a>
   </div>
   </body>
 </html>
