--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Processing page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../static/css/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="../static/css/usebootstrap.css">
-    <link rel="stylesheet" href="../static/css/custom.css">
-    <link rel="icon" href="/images/favicon.gif" type="image/gif" />
+    <link rel="stylesheet" href="static/css/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="static/css/usebootstrap.css">
+    <link rel="stylesheet" href="static/css/custom.css">
+    <link rel="icon" href="images/favicon.gif" type="image/gif" />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../static/js/html5shiv.js"></script>
@@ -21,7 +21,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="nav-container container">
             <a href="http://www.nerc.ac.uk/" target="_blank" class="navbar-brand navbar-brand-image">
-                <img src="../static/images/nerc_logo.png" width="86" height="60" border="0" title="NERC Homepage">
+                <img src="static/images/nerc_logo.png" width="86" height="60" border="0" title="NERC Homepage">
             </a>
         </div>
     </div>
