--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 {% block header %}
-<script type="text/javascript" src="../static/js/jquery.js"></script>
+<script type="text/javascript" src="static/js/jquery.js"></script>
 <script>
 $( document).ready(function(){
     console.log('ready');
