--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -11,7 +11,7 @@ $( document).ready(function(){
 <div class="row">
 <h1>Submit processing job for Project Code: {{ project_code }} Julian Day: {{ julian_day }} Year: {{ year }} </h1>
 </div>
-<form class="form-horizontal" action="/progress" method="post" enctype="multipart/form-data">
+<form class="form-horizontal" action="progress" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-lg-12">
             <div class="well bs-component">
