--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Theme Preview - Usebootstrap.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../static/css/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="../static/css/usebootstrap.css">
+    <link rel="stylesheet" href="static/css/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="static/css/usebootstrap.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="static/js/html5shiv.js"></script>
@@ -1205,7 +1205,7 @@
 
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-	<script src="../static/js/usebootstrap.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+	<script src="static/js/usebootstrap.js"></script>
   </body>
 </html>
