--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -46,20 +46,22 @@ $( document).ready(function(){
     <div class="row">
         <div class="col-lg-12">
             <div class="well bs-component">
-                <table class="table table-striped table-hover table-fixed" id="line_checks_container">
+                    <table class="table table-striped table-hover table-fixed header-fixed">
                     <thead>
                         <tr>
-                            <th><input type="checkbox" id="all_lines_check" name="process_all_lines" checked=""> Process</th>
-                            <th>Flightline name</th>
-                            <th>Band groups</th>
+                            <th width=2%><input type="checkbox" id="all_lines_check" name="process_all_lines" checked=""></th>
+                            <th width=21%>Process</th>
+                            <th width=43%>Flightline name</th>
+                            <th width=33%>Band groups</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for line in flightlines %}
                         <tr>
-                            <td><input type="checkbox" id="line_checkboxes" name="{{ line.name }}_line_check" checked=""></td>
-                            <td>{{ line.name }}</td>
-                            <td>
+                            <td width=2%><input type="checkbox" id="line_checkboxes" name="{{ line.name }}_line_check" checked=""></td>
+                            <td width=21%>&nbsp</td>
+                            <td width=43%>{{ line.name }}</td>
+                            <td width=33%>
                                 <table>
                                     <td>Start </td>
                                     <td>
@@ -82,6 +84,7 @@ $( document).ready(function(){
                         </tr>
                         {% endfor %}
                     </tbody>
+                    </div>
                     <script>
                         $("#all_lines_check").change(function () {
                             $("#line_checks_container :checkbox").prop('checked', $(this).prop('checked'));
