--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -46,7 +46,7 @@ $( document).ready(function(){
     <div class="row">
         <div class="col-lg-12">
             <div class="well bs-component">
-                    <table class="table table-striped table-hover table-fixed header-fixed">
+                    <table class="table table-striped table-hover table-fixed header-fixed" id="line_checks_container">
                     <thead>
                         <tr>
                             <th width=2%><input type="checkbox" id="all_lines_check" name="process_all_lines" checked=""></th>
@@ -108,7 +108,7 @@ $( document).ready(function(){
                     <div class="form-group">
                         <div>
                            <div class="checkbox">
-                                <p>Selecting "mask all" will apply bad pixel masking techniques. For a full explanation of the masking techniques that will be used see the masking <a href="https://arsf-dan.nerc.ac.uk/trac/wiki/FAQ/aplmask">wiki page</a>.</p>
+                                <p>Selecting "mask all" will apply bad pixel masking techniques. For a full explanation of the masking techniques that will be used see the masking <a target="_blank" href="https://arsf-dan.nerc.ac.uk/trac/wiki/FAQ/aplmask">wiki page</a>.</p>
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="col-lg-6">
@@ -143,7 +143,7 @@ $( document).ready(function(){
                     <legend>Geocorrection</legend>
                     <div class="form-group">
                         <div class="col-lg-12">
-                            <p>Set the height model to use for geocorrection, more information can be found about ASTER and SRTM at their respective websites. If uploading your own file please refer <a href="https://arsf-dan.nerc.ac.uk/trac/wiki/FAQ/apldemformat">here</a> for format information.</p>
+                            <p>Set the height model to use for geocorrection, more information can be found about ASTER and SRTM at their respective websites. If uploading your own file please refer <a target="_blank" href="https://arsf-dan.nerc.ac.uk/trac/wiki/FAQ/apldemformat">here</a> for format information.</p>
                             <label>Select elevation model or upload your own</label>
                             <div class="radio">
                                 <label>
@@ -350,7 +350,18 @@ $( document).ready(function(){
     }
 
     function validateForm() {
-
+        var at_least_one = false
+        $('#line_checks_container input[type=checkbox]').each(function(){
+                if (this.checked){
+                    at_least_one = true
+                }
+            }
+        )
+        if (at_least_one == true){
+            return true;
+        } else {
+            return false;
+        }
     }
 </script>
 {% endblock %}
