trying to fix submission rejection

--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -350,10 +350,10 @@ $( document).ready(function(){
     }
 
     function validateForm() {
-        var at_least_one = false
+        var at_least_one = false;
         $('#line_checks_container input[type=checkbox]').each(function(){
                 if (this.checked){
-                    at_least_one = true
+                    at_least_one = true;
                 }
             }
         )
