--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -45,7 +45,7 @@ $( document).ready(function(){
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="well bs-component">
+            <div class="well bs-component" id="line_checks_div">
                     <table class="table table-striped table-hover table-fixed header-fixed" id="line_checks_container">
                     <thead>
                         <tr>
@@ -362,6 +362,11 @@ $( document).ready(function(){
             event.returnValue=true;
             return true;
         } else {
+            var errordiv = document.createElement('div');
+            errordiv.id = "tableerror"
+            errordiv.className = "alert alert-dismissable alert-success";
+            errordiv.innerHTML = '<button type="button" class="close" data-dismiss="alert">×</button><strong>Please select at least one line!</strong>'
+            errordiv.appendChild("line_checks_div")
             event.returnValue=false;
             return false;
         }
