added bootstrap js

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="static/css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="static/css/usebootstrap.css">
     <link rel="stylesheet" href="static/css/custom.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/usebootstrap.js"></script>
     <link rel="icon" href="images/favicon.gif" type="image/gif" />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
