updated to indluce comment about confirmation email and link

--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -31,6 +31,6 @@ $( document).ready(function(){
 {% block content %}
     <div class="row well bs-component">
         <h1>Processing</h1>
-        Your job has been successfully submitted
+        Your job has been successfully submitted, please remember to check your email inbox for the confirmation link as processing will not progress until this has been clicked.
     </div>
 {% endblock %}
