--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,7 +20,7 @@
     {% block header %}
     {% endblock %}
   </head>
-  <body>
+  <body class="body-hyper">
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="nav-container container">
             <a href="http://www.nerc.ac.uk/" target="_blank" class="navbar-brand navbar-brand-image">
