added error handling for loading of projects, also included some new bits for 404.html

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,7 +11,7 @@ $( document).ready(function(){
     <div class="container">
         <div class="bs-component">
             <div class="well bs-component">
-                <title>404 Project not found!</title>
+                <h1>404 Project not found!</h1>
                 <p>
                     The project day you requested does not exist on our system, if this resulted from a link on ARSFs website please email us at arsf-processing@pml.ac.uk
                 </p>
