--- a/templates/kml.html
+++ b/templates/kml.html
@@ -68,11 +68,93 @@
          <div id="lidarmosaic-tab">
 <!--lidarmosaic-->
          </div>
-         
       </div>
-      {% for kml in kml_list %}
-      <a href="{{ kml[0] }}">processing {{ kml[1] }}</a>
-      {% endfor %}
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=219&year=2014&project=GB12_03&sortie=a'>219a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=172&year=2014&project=RG12_09'>172</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=290&year=2014&project=RG13_06'>290</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=217&year=2014&project=GB13_08'>217</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=163a&year=2014&project=GB13_01'>163a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=295&year=2014&project=RG13_06'>295</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=289&year=2014&project=RG13_06'>289</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=067&year=2014&project=GB14_00'>067</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=219&year=2014&project=GB14_04&sortie=b'>219b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=241&year=2014&project=MA14_16'>241</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=068&year=2014&project=BAS13_01&sortie=b'>068b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=088&year=2014&project=RG12_09'>088</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=294&year=2014&project=RG13_06'>294</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=298&year=2014&project=RG13_06'>298</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=069&year=2014&project=BAS13_01'>069</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=070&year=2014&project=BAS13_01'>070</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=306&year=2014&project=MA14_11'>306</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=281&year=2014&project=GB14_00'>281</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=075&year=2014&project=GB12_05'>075</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=291&year=2014&project=RG13_06'>291</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=221&year=2014&project=GB13_01'>221</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=288&year=2014&project=RG13_06'>288</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=152&year=2014&project=SELEXT14_01&sortie=b'>152b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=283&year=2014&project=MA14_21'>283</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=063&year=2014&project=BAS13_01'>063</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=303&year=2014&project=RG13_06'>303</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=062&year=2014&project=BAS13_01'>062</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=296&year=2014&project=MA14_21'>296</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=216&year=2014&project=GB14_00'>216</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=317&year=2014&project=MA14_08'>317</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=309&year=2014&project=MA14_14'>309</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=219&year=2014&project=GB12_03&sortie=a'>219a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=172&year=2014&project=RG12_09'>172</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=290&year=2014&project=RG13_06'>290</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=217&year=2014&project=GB13_08'>217</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=163&year=2014&project=GB13_01&sortie=a'>163a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=295&year=2014&project=RG13_06'>295</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=289&year=2014&project=RG13_06'>289</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=067&year=2014&project=GB14_00'>067</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=219&year=2014&project=GB14_04&sortie=b'>219b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=241&year=2014&project=MA14_16'>241</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=068&year=2014&project=BAS13_01&sortie=b'>068b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=088&year=2014&project=RG12_09'>088</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=294&year=2014&project=RG13_06'>294</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=298&year=2014&project=RG13_06'>298</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=069&year=2014&project=BAS13_01'>069</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=070&year=2014&project=BAS13_01'>070</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=306&year=2014&project=MA14_11'>306</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=281&year=2014&project=GB14_00'>281</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=075&year=2014&project=GB12_05'>075</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=291&year=2014&project=RG13_06'>291</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=221&year=2014&project=GB13_01'>221</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=288&year=2014&project=RG13_06'>288</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=152&year=2014&project=SELEXT14_01&sortie=b'>152b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=283&year=2014&project=MA14_21'>283</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=063&year=2014&project=BAS13_01'>063</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=303&year=2014&project=RG13_06'>303</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=062&year=2014&project=BAS13_01'>062</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=296&year=2014&project=MA14_21'>296</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=216&year=2014&project=GB14_00'>216</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=317&year=2014&project=MA14_08'>317</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=309&year=2014&project=MA14_14'>309</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=297&year=2014&project=RG13_06'>297</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=316&year=2014&project=MA14_10'>316</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=293&year=2014&project=RG13_06'>293</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=078&year=2014&project=GB14_00'>078</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=164&year=2014&project=GB13_01'>164</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=083&year=2014&project=GB12_04'>083</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=243&year=2014&project=MA14_21&sortie=b'>243b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=159&year=2014&project=RG12_09'>159</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=302&year=2014&project=RG13_06&sortie=a'>302a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=156&year=2014&project=GB13_10'>156</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=318&year=2014&project=MA14_08'>318</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=238&year=2014&project=GB14_00'>238</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=302&year=2014&project=PG14_01&sortie=b'>302b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=315&year=2014&project=MA14_07'>315</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=141&year=2014&project=GB13_00'>141</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=304&year=2014&project=PG14_01'>304</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=163c&year=2014&project=BGS12_01'>163c</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=152&year=2014&project=GB12_05&sortie=a'>152a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=152&year=2014&project=SELEX14_01&sortie=b'>152b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=057&year=2014&project=GB14_00'>057</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=175&year=2014&project=AIRSAR&sortie=b'>175b</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=169&year=2014&project=GB12_03'>169</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=068&year=2014&project=BAS13_01&sortie=a'>068a</a><br>
+<a href='https://arsf-dandev.nerc.ac.uk/processor/jobrequest?day=182&year=2014&project=GB14_00'>182</a><br>
   </div>
   </body>
 </html>
