added error messages to 404.html and changed the readme to better reflect current status

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,9 +11,10 @@ $( document).ready(function(){
     <div class="container">
         <div class="bs-component">
             <div class="well bs-component">
-                <h1>404 Project not found!</h1>
+                <h1>{{ title }}</h1>
                 <p>
-                    The project day you requested does not exist on our system, if this resulted from a link on ARSFs website please email us at arsf-processing@pml.ac.uk
+                    {{ Error }}
+                    If this resulted from a link on ARSFs website please email us at arsf-processing@pml.ac.uk
                 </p>
             </div>
         </div>
