--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -24,7 +24,7 @@ $( document).ready(function(){
                                     This is the job request page for day {{ julian_day }}, it can be used to create processing requests for the ARSF-DAN grid. The system will aim to get data to you as quickly as possible however timings will depend on system load. Most options have been <strong>preset with optimum values</strong> where appropriate, once your jobs have completed their processing you will receive an email detailing download instructions.
                                 </p>
                                 <p>
-                                    If using data produced using this tool you must cite this paper:
+                                    If using data produced using this tool you <strong>must</strong> cite this paper:
                                     <a href="http://dl.acm.org/citation.cfm?id=2589087">Data processing of remotely sensed airborne hyperspectral data using the Airborne Processing Library (APL): Geocorrection algorithm descriptions and spatial accuracy assessment</a>
                                 </p>
                             </div>
@@ -225,10 +225,10 @@ $( document).ready(function(){
                             <div class="form-row">
 
                                 <p>Select your pixel size, note that the size of pixels will affect output file size. The optimum size for the altitude of your data has already been selected.</p>
-                                <input type="checkbox" id="pixel_check" name="pixel_check" > Square pixels
+				<div class="row">
                                 <label for="pixel_size_x" class="col-lg-3 control-label">Pixel Size X:</label>
                                 <div class="col-lg-3">
-                                    <select class="col-lg-3 form-control" id="" name="pixel_size_x">
+                                    <select class="col-lg-3 form-control" id="pixel_size_x" name="pixel_size_x">
                                         {% for size in pixel_sizes %}
                                         <option {% if size == optimal_pixel %}selected{% endif %}>{{ size }}</option>
                                         {% endfor %}
@@ -243,9 +243,29 @@ $( document).ready(function(){
                                     </select>
                                 </div>
                                 </div>
-                            <div class="row">
-                                <p>&nbsp</p>
-                            </div>
+				<div class="row">
+					<label class="col-lg-6">
+		                        	<input type="checkbox" id="pixel_check" name="pixel_check" checked=''> Square pixels
+					</label>
+				</div>
+				<script>
+				    $("#pixel_size_x").change(function () {
+					if($('#pixel_check').prop('checked') == true) {
+					    $("#pixel_size_y").val($("#pixel_size_x").val());
+					}
+				    });
+
+				    $("#pixel_size_y").change(function () {
+					if($('#pixel_check').prop('checked') == true) {
+					    $("#pixel_size_x").val($("#pixel_size_y").val());
+					}
+				    });	
+
+				    $('#pixel_check').change(function () {
+				    	$("#pixel_size_y").val($("#pixel_size_x").val());
+				    });
+				</script>
+				</div>
                             <div class="form-row">
                                 <p>&nbsp</p>
                                 <label>Bounding</label>
@@ -308,7 +328,7 @@ $( document).ready(function(){
     <input type="hidden" name="sortie" value="{{ sortie }}">
     <input type="hidden" name="year" value="{{ year }}">
     <input type="hidden" name="project" value="{{ project_code }}">
-    <button type="reset" value="Reset">Reset</button>
+    <button type="reset" value="Reset" class="btn btn-primary">Reset</button>
     <button id="submit" type="submit" class="btn btn-primary">Submit</button>
 </form>
 <script>
@@ -377,17 +397,5 @@ $( document).ready(function(){
             return false;
         }
     }
-
-    $("#pixel_size_x").change(function () {
-        if(document.getElementById('pixel_check').checked) {
-            $("#pixel_size_y").value = $("#pixel_size_x").value;
-        }
-    });
-
-    $("#pixel_size_y").change(function () {
-        if(document.getElementById('pixel_check').checked) {
-            $("#pixel_size_x").value = $("#pixel_size_y").value;
-        }
-    });
 </script>
 {% endblock %}
