--- a/templates/requestform.html
+++ b/templates/requestform.html
@@ -50,8 +50,9 @@ $( document).ready(function(){
     <div class="row">
         <div class="col-lg-12">
             <div class="well bs-component" id="line_checks_div">
+                <div class="panel panel-no-margin panel-primary">
                 <table class="table table-striped table-hover table-fixed header-fixed" id="line_checks_container">
-                    <thead>
+                    <thead class="panel-heading panel-heading-border-solid">
                         <tr>
                             <th width=2%><input type="checkbox" id="all_lines_check" name="process_all_lines" checked=""></th>
                             <th width=21%>Process</th>
@@ -59,7 +60,7 @@ $( document).ready(function(){
                             <th width=33%>Band groups</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="panel-body">
                         {% for line in flightlines %}
                         <tr>
                             <td width=2%><input type="checkbox" id="line_checkboxes" name="{{ line.name }}_line_check" checked=""></td>
@@ -99,6 +100,7 @@ $( document).ready(function(){
                             }
                         });
                     </script>
+                    </div>
                 </table>
             </div>
         </div>
